made the landing page responsive for 320X568

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -113,7 +113,7 @@
           Amity International Model United Nations<br />
         </h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -218,7 +218,7 @@
         <br />
       </h2>
       <div class="content">
-        <p class="header-text theme-eng">
+        <p class="header-text header-sec">
           <b>Our Vision</b> is to build the country by fortifying the general
           public through providing collective, collaborative, teaching; so as to
           be the worldwide leader in skill training and embodying our promise to
@@ -336,7 +336,7 @@
       </div>
     </div>
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
