--- a/committees/icj.html
+++ b/committees/icj.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -113,7 +113,7 @@
       <div class="header-section">
         <h2 class="header theme">International Court of Justice<br /></h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The International Court of Justice (ICJ) is the United Nations' main
             judicial body (UN). The United Nations Charter established it in
             June 1945, and it began functioning in April 1946. The Court's
@@ -138,7 +138,7 @@
     </div>
 
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
