--- a/committees/ip.html
+++ b/committees/ip.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -113,7 +113,7 @@
       <div class="header-section">
         <h2 class="header theme">International Press <br /></h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             World democracies believe reporting to be the fourth pillar. It
             empowers everyone, regardless of their social station, to express
             their opinions. It is an instrument for establishing clarity of
@@ -137,7 +137,7 @@
     </div>
 
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
