--- a/committees/na.html
+++ b/committees/na.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -115,7 +115,7 @@
           NITI Aayog (National Institution for Transforming India)<br />
         </h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The NITI (National Institution for Transforming India) Aayog is a
             policy think tank of the Government of India that was established to
             achieve sustainable development goals through cooperative federalism
@@ -144,7 +144,7 @@
     </div>
 
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
