--- a/committees/uncsw.html
+++ b/committees/uncsw.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -111,7 +111,7 @@
       <div class="header-section">
         <h2 class="header theme">United Nations Commission on the Status of Women (UNCSW)<br /></h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The Commission on the Status of Women (CSW) is the world's first international body dedicated solely to advancing women's equality, sexual orientation equality, and empowerment. In February 1947, the Commission met for the first time in Lake Success, New York. The Commission's initial focus was on legal measures to preserve women's human rights and raising awareness of women's condition around the world. Deliberations in the Commission introduced new topics into the international political arena. The work of the Commission drew the interest, participation, and support of the burgeoning international women's movement from the start.<br>
 
 In keeping with the Committee's unwavering commitment to securing a stage and strongly advocating for gender equality and women's empowerment around the world, Delegates will be expected to create a unique space for the exchange of national experience and good practical application, as well as for bringing the voice of the women's movement to the United Nations through debate and discourse.
@@ -122,7 +122,7 @@ In keeping with the Committee's unwavering commitment to securing a stage and st
 
      
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
