--- a/committees/unfccc.html
+++ b/committees/unfccc.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -111,7 +111,7 @@
       <div class="header-section">
         <h2 class="header theme">The United Nations Framework Convention on Climate Change<br /></h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The United Nations Framework Convention on Climate Change (UNFCCC)  is the UN organization that is responsible for assisting the global response to the threat of climate change.  The Convention is the parent instrument of the 2015 Paris Agreement and has nearly universal membership (197 Parties). The Paris Agreement's major goal is to prevent world average temperature rise this century as near to 1.5 degrees Celsius above pre-industrial levels as possible. The UNFCCC is also the parent treaty of the Kyoto Protocol, which was signed in 1997. <br>
 
             The committee is known to provide technical assistance in the analysis and assessment of climate change data submitted by Parties, as well as in the execution of the Kyoto processes. It also manages the Paris Agreement's registry of Nationally Determined Contributions (NDCs), which is an important part of the agreement's implementation. They also organise and assist two to four negotiation sessions per year, the largest and most important of which is the Conference of the Parties, which takes place every year in different parts of the world. It is the largest annual United Nations meeting, with roughly 25,000 people in attendance on average.
@@ -122,7 +122,7 @@
 
      
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
