--- a/committees/unhr.html
+++ b/committees/unhr.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -115,7 +115,7 @@
           United Nations Human Rights Council (UNHRC) <br />
         </h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The Human Rights Council is an intergovernmental body within the
             United Nations system comprised of 47 states that are responsible
             for the promotion and protection of all human rights worldwide. It
@@ -143,7 +143,7 @@
     </div>
 
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
