--- a/index.html
+++ b/index.html
@@ -113,9 +113,22 @@
 
       <div class="header-section">
         <h2 class="header theme">Preserverantia Omnia Vincit<br /></h2>
-        <h3 class="theme-eng">
+        <h3 class="header-sec">
           <b>January 22nd &mdash; January 23rd, 2022</b><br />
         </h3>
+      </div>
+
+      <div class="responsive-quote">
+        <h1 class="responsive-center-text">
+          <i>
+            <span style="font-size: 20px">"</span>Perseverance doesn't always
+            mean winning and losing. Perseverance means showing up and rising to
+            the occasion and performing.</i
+          ><br />
+        </h1>
+        <h3 class="responsive-quote-teller">&mdash; Michael Chiesa</h3>
+        <p id="timer"></p>
+        <div class="responsive-btn">REGISTER</div>
       </div>
 
       <div id="main">
@@ -134,7 +147,7 @@
               ><br />
             </h1>
             <h3 class="quote">&mdash; Michael Chiesa</h3>
-            <p id="demo"></p>
+            <p id="timer"></p>
             <div class="btn">REGISTER</div>
           </div>
           <video
@@ -268,7 +281,7 @@
       </div>
     </div>
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
@@ -280,8 +293,6 @@
 
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
-            width="600"
-            height="200"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
