--- a/messages.html
+++ b/messages.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -112,7 +112,7 @@
         <h2 class="header theme">Message from Patron-in-Chief<br /></h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
+          <!-- <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -135,7 +135,7 @@
         <h2 class="header theme">Message from Patron<br /></h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
+          <!-- <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -158,7 +158,7 @@
         <h2 class="header theme">Message from Chairperson<br /></h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
+          <!-- <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -181,7 +181,7 @@
         <h2 class="header theme">Message from Co-Chairperson<br /></h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
+          <!-- <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -201,7 +201,7 @@
       </div>
     </div>
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
