--- a/our-team/secretariate.html
+++ b/our-team/secretariate.html
@@ -69,7 +69,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>Resources</li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
         <h2 class="header theme">Secretariat<br /></h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
+          <!-- <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -100,7 +100,7 @@
     </div>
 
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
