--- a/resources/background-guides.html
+++ b/resources/background-guides.html
@@ -69,7 +69,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -108,7 +108,7 @@
         <h2 class="header theme">Background Guide</h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
+          <!-- <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -129,85 +129,85 @@
     </div>
 
     <hr />
-    <footer>
-        <div class="footer-content">
-          <div class="content-one">
-            <h3>Conference Information</h3>
-  
-            <p>
-              January 22-23, 2022<br />
-              Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
-            </p>
-  
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
-              width="600"
-              height="200"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-            ></iframe>
+    <footer id="bottom">
+      <div class="footer-content">
+        <div class="content-one">
+          <h3>Conference Information</h3>
+
+          <p>
+            January 22-23, 2022<br />
+            Amity Rd, Sector 125, Noida, Uttar Pradesh 201301
+          </p>
+
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8590711634583!2d77.33079511478194!3d28.543955394835827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sin!4v1634743642149!5m2!1sen!2sin"
+            width="600"
+            height="200"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="content-two">
+          <h3>Contact Us</h3>
+
+          <div class="contact">
+            <p><b>Shubhangi Thakur</b>, Secretary General</p>
+            <a href="tel:+91 87006 59269">+91 87006 59269</a><br />
+            <a href="mailto: sgamimun@gmail.com">sgamimun@gmail.com</a>
           </div>
-          <div class="content-two">
-            <h3>Contact Us</h3>
-  
-            <div class="contact">
-              <p><b>Shubhangi Thakur</b>, Secretary General</p>
-              <a href="tel:+91 87006 59269">+91 87006 59269</a><br />
-              <a href="mailto: sgamimun@gmail.com">sgamimun@gmail.com</a>
-            </div>
-  
-            <div class="contact">
-              <p><b>Rohan Nagpal</b>, Deputy Secretary General</p>
-              <a href="tel:+91 9599 441919">+91 9599 441919</a><br />
-              <a href="mailto: dsgamimun@gmail.com">dsgamimun@gmail.com</a>
-            </div>
-  
-            <div class="contact">
-              <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
-              <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
-              <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
-            </div>
-  
-            <div class="contact">
-              <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
-              <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
-              <a href="mailto: chirag02.sharma@gmail.com"
-                >infoamimun22@gmail.com</a
-              >
-            </div>
+
+          <div class="contact">
+            <p><b>Rohan Nagpal</b>, Deputy Secretary General</p>
+            <a href="tel:+91 9599 441919">+91 9599 441919</a><br />
+            <a href="mailto: dsgamimun@gmail.com">dsgamimun@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Zeeshan Ahmad Fareed</b>, Director General</p>
+            <a href="tel:+91 99996 08171">+91 99996 08171</a><br />
+            <a href="mailto:  dgamimun22@gmail.com"> dgamimun22@gmail.com</a>
+          </div>
+
+          <div class="contact">
+            <p><b>Chirag Sharma</b>, USG Delegate Affairs</p>
+            <a href="tel:+91 98688 77976">+91 98688 77976</a><br />
+            <a href="mailto: chirag02.sharma@gmail.com"
+              >infoamimun22@gmail.com</a
+            >
           </div>
         </div>
-        <div class="footer-bottom">
-          <ul class="socials">
-            <li>
-              <a href="https://www.facebook.com/amitymun/"
-                ><i class="fa fa-facebook"></i
-              ></a>
-            </li>
-            <li>
-              <a
-                href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"
-                ><i class="fa fa-youtube"></i
-              ></a>
-            </li>
-            <li>
-              <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
-            </li>
-            <li>
-              <a href="https://instagram.com/amimun22?utm_medium=copy_link"
-                ><i class="fa fa-instagram"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/company/amimunconference"
-                ><i class="fa fa-linkedin-square"></i
-              ></a>
-            </li>
-          </ul>
-          <p>Copyright &copy;2022 Amity University</p>
-        </div>
-      </footer>
+      </div>
+      <div class="footer-bottom">
+        <ul class="socials">
+          <li>
+            <a href="https://www.facebook.com/amitymun/"
+              ><i class="fa fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/channel/UCa3Ly8qOGbSJ0_X3bZEGzLA/featured"
+              ><i class="fa fa-youtube"></i
+            ></a>
+          </li>
+          <li>
+            <a href="amimun2022@gmail.com"><i class="fa fa-google-plus"></i></a>
+          </li>
+          <li>
+            <a href="https://instagram.com/amimun22?utm_medium=copy_link"
+              ><i class="fa fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/company/amimunconference"
+              ><i class="fa fa-linkedin-square"></i
+            ></a>
+          </li>
+        </ul>
+        <p>Copyright &copy;2022 Amity University</p>
+      </div>
+    </footer>
     <script>
       var $cursor = $(".cursor"),
         $overlay = $(".project-overlay");
