--- a/resources/country-matrix.html
+++ b/resources/country-matrix.html
@@ -709,7 +709,7 @@
       </div>
     </div>
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
