--- a/committees/unga.html
+++ b/committees/unga.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -111,7 +111,7 @@
       <div class="header-section">
         <h2 class="header theme">United Nations General Assembly            <br /></h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The United Nations General Assembly (UNGA) is the UN's principal policy-making organ. It is comprised of all Member States and provides a unique platform for multilateral discussion of the whole range of international issues covered by the United Nations Charter. Each of the United Nations' 193 member states gets one vote.  Following the COVID-19 pandemic, the UN General Assembly has been carrying out its job since 2020 using creative methods to ensure business continuity and reduce illness spread. Specific examples include the usage of virtual platforms for meetings and the implementation of e-voting via a procedure for decision-making. <br>
 
             Delegates will be asked to identify the flaws and changes that are needed to adapt these rules to the fast-paced environment. Members of the United Nations General Assembly work toward a common aim of concentrating global action as never before to ensure peace and development. The goal of this simulation is to replicate the operations of the UN General Assembly's second committee, ECOFIN. It primarily addresses macroeconomic policy issues, as well as financing for development, sustainable development, globalisation and interdependence, poverty eradication, operational activities for development, agriculture development, food security and nutrition, and information and communications technologies for development, as well as global partnerships. 
@@ -122,7 +122,7 @@
 
      
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
