--- a/committees/unsc.html
+++ b/committees/unsc.html
@@ -73,7 +73,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>Join Club</li>
+            <li>AMIMUN Club</li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -113,7 +113,7 @@
       <div class="header-section">
         <h2 class="header theme">United Nations Security Council <br /></h2>
         <div class="content">
-          <h3 class="header-text theme-eng">
+          <h3 class="header-text header-sec">
             The United Nations Security Council (UNSC) is one of the United
             Nations (UN) six primary organs, tasked with ensuring international
             peace and security, recommending new UN members to the General
@@ -141,7 +141,7 @@
     </div>
 
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
