--- a/resources/awards-criteria.html
+++ b/resources/awards-criteria.html
@@ -108,7 +108,7 @@
         <h2 class="header theme">Awards Criteria</h2>
         <div class="content">
           <h3 class="comming-soon">Coming Soon</h3>
-          <!-- <h3 class="header-text theme-eng">
+          <!-- <h3 class="header-text header-sec">
             The second e-edition of Amity International Model United Nations
             shall be a simulation of the United Nations, spanning two days. At
             AMIMUN, delegates gain a better understanding of the inner workings
@@ -129,7 +129,7 @@
     </div>
 
     <hr />
-    <footer>
+    <footer id="bottom">
       <div class="footer-content">
         <div class="content-one">
           <h3>Conference Information</h3>
