fixed respondive timer tissue

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           ><br />
         </h1>
         <h3 class="responsive-quote-teller">&mdash; Michael Chiesa</h3>
-        <p id="timer"></p>
+        <p id="responsive-timer"></p>
         <div class="responsive-btn">REGISTER</div>
       </div>
 
